# CPPython-PDM

./: pyproject.toml
cppython_pdm/: plugin.py
tests/integration/: test_interface.py
tests/unit/: test_interface.py
