[project]
description = ""
name = "cppython-pdm"

license = "MIT"

authors = [
  "Synodic Software",
]

readme = "README.md"

homepage = "https://github.com/Synodic-Software/CPPython-PDM"
repository = "https://github.com/Synodic-Software/CPPython-PDM"

dynamic = ["version"]

requires-python = ">=3.10"

dependencies = [
  "cppython>=0.2.4",
  "pdm>=1.12.8",
]

[tool.pdm.dev-dependencies]
lint = [
  "black>=22.1.0",
  "pylint>=2.12.2",
  "isort>=5.10.1",
]
test = [
  "pytest >=7.0.0",
  "pytest-cov>=3.0.0",
  "pytest-mock>=3.7.0",
]

# Register PDM entry point
[project.entry-points.pdm]
cppython = "cppython-pdm.plugin:cppython_plugin"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"
extension-pkg-whitelist = "pydantic"

[tool.pylint.format]
max-line-length = "120"

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]
